# wasi_ext_lib

./: .ci.yml  .gitignore  Cargo.toml  README.md  build.rs  canonicalize.patch
.github/workflows/: build.yml
c_bindings/: Cargo.toml  README.md  cbindgen.toml  wasi_ext_lib.c  wasi_ext_lib.h
c_bindings/c_src/: lib.c
c_bindings/json/: json.c  json.h
c_bindings/src/: lib.rs
c_lib/: Makefile  wasi_ext_lib.c  wasi_ext_lib.h
src/: constants.rs  lib.rs
