[package]
authors = [ "Antmicro <antmicro.com>" ]
name = "wasi_ext_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi = "0.11.0"

[build-dependencies]
bindgen = "0.61.0"

[features]
hterm = []

[lib]
crate-type=["rlib"]
