[package]
name = "wasi_ext_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi = "0.11.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
libc = "0.2.136"

[build-dependencies]
bindgen = "0.61.0"
cc = "1.0"

[features]
hterm = []

[lib]
crate-type=["rlib"]
